# vpk

./: .gitignore  Makefile.am  README.md  Readme  configure.ac  configure.in  env.profile  execute.sh  make_config.sh  premake  premake.sh  prepare.sh  release.sh
main/: 11.txt  Makefile.am  curl_md5.h  dev_gps_pc.json  dev_info_pc.json  dev_setting_pc.json  md5.c  mq_recv  mq_send  mq_test  sample  sample.c  sample_00  sample_00.c  sample_actions.c  sample_aes.c  sample_condition.c  sample_consumer.c  sample_darray.c  sample_des.c  sample_download.c  sample_epoll.c  sample_evioevent.c  sample_evmsgevent.c  sample_filesys.c  sample_ioevent.c  sample_jasson.c  sample_jmp.c  sample_md5.c  sample_minheap.c  sample_mock.c  sample_mq.c  sample_mq_recv.c  sample_mq_send.c  sample_msgqueue.c  sample_mtp.c  sample_multcast.c  sample_net.c  sample_semaphore.c  sample_socket.c  (+17 more)
main/algo/: addition.c  algo_medium.cpp  binary_tree.cpp  btree.cpp  coconut.c  easy.c  factorial.c  kmp.c  max_average_ratio.c  medium.c  meduim.c  operator128.c  util_uint128.h
main/design/: README
main/design/d01-factory/: factory.cpp  factory.h  main.cpp  makefile  product.cpp  product.h
main/design/d02-abstract-factory/: abstract-factory.cpp  abstract-factory.h  main.cpp  makefile  product.cpp  product.h
main/design/d03-single/: single.cpp
main/design/d04-builder/: director.cpp  director.h  main.cpp  makefile  product.cpp  product.h
main/design/d05-prototype/: prototype.cpp
main/design/d06-bridge/: abstraction.cpp  abstraction.h  abstractionimp.cpp  abstractionimp.h  main.cpp  makefile
main/design/d07-adapter/: adapter-class.cpp  adapter-object.cpp
main/design/d08-decorator/: decorator.cpp
main/design/d09-composite/: component.cpp  component.h  composite.cpp  composite.h  leaf.cpp  leaf.h  main.cpp  makefile
main/design/d10-flyweight/: flyweight.cpp  flyweight.h  flyweight_factory.cpp  flyweight_factory.h  main.cpp  makefile
main/design/d11-facade/: facade.cpp  facade.h  main.cpp  makefile
main/design/d12-proxy/: makefile  proxy.cpp  proxy.h
main/design/d13-template/: makefile  template.cpp  template.h
main/design/d14-strategy/: context.cpp  context.h  main.cpp  makefile  strategy.cpp  strategy.h
main/design/d15-state/: makefile  state.cpp  state.h
main/design/d16-observer/: main.cpp  makefile  observer.cpp  observer.h  subject.cpp  subject.h
main/design/d17-memento/: makefile  memento.cpp  memento.h
main/design/d18-mediator/: colleague.cpp  colleague.h  main.cpp  makefile  mediator.cpp  mediator.h
main/design/d19-command/: command.cpp  command.h  invoker.cpp  invoker.h  main.cpp  makefile  receiver.cpp  receiver.h
main/design/d20-visitor/: element.cpp  element.h  main.cpp  makefile  visitor.cpp  visitor.h
main/design/d21-chain-responsibility/: handle.cpp  handle.h  logger.cpp  makefile
main/design/d22-iterator/: aggregate.cpp  aggregate.h  iterator.cpp  iterator.h  main.cpp  makefile
main/design/d23-interpreter/: context.cpp  context.h  interpret.cpp  interpret.h  main.cpp  makefile
main/destructor/: foo.cpp  foo.h  sample_destructor.cpp
main/plug-in/: add.c  makefile  plugin_dl.c  plugin_dl.h  plugin_main.c
main/program/: code_template.cpp  reference.cpp
main/program/code_00/: main.cpp
main/program/code_01_file/test_01/: vz_data.cpp  vz_data.h  vz_file_utils.cpp  vz_file_utils.h  vz_typedef.h
main/program/code_01_file/test_02/: c99defs.h  file-serializer.c  file-serializer.h  main.c  platform.h
main/program/code_01_file/test_03_operation_file/: file_protocol.cpp  file_protocol.h  file_serializer.cpp  file_serializer.h  main.cpp  makefile  operation_file.cpp  operation_file.h  operation_file_impl.cpp  operation_file_impl.h  operation_typedef.h  singleton.h
mips/include/: nvtcfg_define.h
mips/lib/: libcurl.so.4.4.0
nvt/include/: nvtuctrl.h
solution/vpk/: recorder-2.0.sln  tbox.sln
vpk/: Makefile.am
vpk/inc/: macro_event.h  vpk.h  vpk_action.h  vpk_b64.h  vpk_barrier.h  vpk_constants.h  vpk_crypto.h  vpk_darray.h  vpk_darray_list.h  vpk_event.h  vpk_events.h  vpk_filesys.h  vpk_hash.h  vpk_heap.h  vpk_ipc.h  vpk_libc.h  vpk_list.h  vpk_logging.h  vpk_md5.h  vpk_minheap.h  vpk_mmap.h  vpk_nvtuctrlc.h  vpk_queues.h  vpk_serialc.h  vpk_sock.h  vpk_threading.h  vpk_timer.h  vpk_typedef.h  vpk_util.h  vpk_workqueue.h
vpk/src/: vpk_actions.c  vpk_actions.h  vpk_actuator.c  vpk_actuator.h  vpk_b64.c  vpk_barrier.c  vpk_cdevice.c  vpk_cdevice.h  vpk_crypto.c  vpk_darray.c  vpk_darray_list.c  vpk_hash.c  vpk_ieventq.c  vpk_ieventq.h  vpk_ifilesys.c  vpk_ifilesys.h  vpk_ipc.c  vpk_ipc_sem.c  vpk_ipc_sem.h  vpk_ipc_shm.c  vpk_ipc_shm.h  vpk_libc.c  vpk_logger.c  vpk_logger.h  vpk_md5.c  vpk_mmap.c  vpk_mqueue.c  vpk_nvtuctrl.c  vpk_nvtuctrl.h  vpk_object.c  vpk_object.h  vpk_serial.c  vpk_serial.h  vpk_session.c  vpk_session.h  vpk_sock.c  vpk_sock_if.c  vpk_sock_resolv.c  vpk_sort.c  vpk_system.c  (+5 more)
vpk/src/database/: sample_sql.c  sql_value.c  sql_value.h  vpk_iterator.c  vpk_iterator.h  vpk_sql.c  vpk_sql.h
vpk/src/database/sql/: sql_impl.h  sql_sqlite3.c  sql_sqlite3.h
vpk/src/events/: epoll.c  event.c  event.h  event_map.c  event_map.h  event_msg.c  event_msg.h  event_thread.c  event_thread.h
vpk/src/platform/generic/: generic_actuator.c  generic_actuator.h  generic_eventq.c  generic_eventq.h  generic_log.c  generic_log.h  generic_session.c  generic_session.h  generic_system.c  generic_system.h
vpk/src/platform/nt966x/: nt966x_eventq.c  nt966x_eventq.h  nt966x_log.c  nt966x_log.h  nt966x_nvtuctrl.c  nt966x_nvtuctrl.h  nt966x_serial.c  nt966x_serial.h  nt966x_session.c  nt966x_session.h  nt966x_system.c  nt966x_system.h
vpk/src/platform/x86/: hi35xx_actuator.c  hi35xx_actuator.h  x86_actuator.c  x86_actuator.h  x86_eventq.c  x86_eventq.c.posix_mq  x86_eventq.c.systemv_mq  x86_eventq.h  x86_log.c  x86_log.h  x86_nvtuctrl.c  x86_nvtuctrl.h  x86_serial.c  x86_serial.h  x86_session.c  x86_session.h  x86_system.c  x86_system.h
vpk/src/timer/: timer_epoll.c  timer_epoll.h  timer_event.c  timer_event.h
x86/lib/: libtimapi.so.0  (+1 more)
(+15 files in other folders)
