#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([test], 1.0)
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h stdint.h stdlib.h string.h sys/time.h termios.h unistd.h])
project_dir=/media/zouqing/9d0165e6-5910-46c0-9389-cb9a7e7b899b/zouqing/work/project/vpk
AC_SUBST(project_dir)
GBASE_INCLUDE="/opt/mipsel-24kec-linux-uclibc/mipsel-24kec-linux-uclibc/sysroot/usr/include"
GBASE_LIB="/opt/mipsel-24kec-linux-uclibc/mipsel-24kec-linux-uclibc/sysroot/lib"
GOLBAL_CFLAGS="-DDEBUG -I${GBASE_INCLUDE}"
GOLBAL_CPPFLAGS="-DDEBUG -I${GBASE_INCLUDE}"
GOLBAL_LDFLAGS="-L${GBASE_LIB}"

CFLAGS='-Wall -I$(GBASE_INCLUDE) -I$(project_dir)/nvt/include -I$(project_dir)/vpk/inc -I$(project_dir)/vpk/src'

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_FORK
AC_CHECK_FUNCS([bzero memset select strstr])

AC_CONFIG_FILES([Makefile
                 vpk/Makefile])

AC_OUTPUT
